Fixed number phone on Iphone

--- a/app/sass/media.sass
+++ b/app/sass/media.sass
@@ -128,8 +128,14 @@
         .phone
             font-family: $default-font
             text-align: left
+            display: flex!important
+            align-items: center
+            .fa-mobile
+                font-size: 17px
+                margin-right: 5px
             &-number
                 padding-left: 6px
+
     
     .fotorama
         background-color: transparent 
